--- a/Newbie/InteractiveRatingComponent/index.html
+++ b/Newbie/InteractiveRatingComponent/index.html
@@ -63,7 +63,7 @@
             </section>
             <div class="attribution">
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-                Coded by <a href="#">yhertekin</a>.
+                Coded by <a href="https://www.frontendmentor.io/profile/yhertekin">yhertekin</a>.
             </div>
         </main>
 
