added alt to img

--- a/Newbie/ProfileCardComponent/index.html
+++ b/Newbie/ProfileCardComponent/index.html
@@ -33,7 +33,11 @@
 					src="/images/bg-pattern-card.svg"
 					alt="pattern background"
 				/>
-				<img class="card__profile-image" src="/images/image-victor.jpg" />
+				<img
+					class="card__profile-image"
+					src="/images/image-victor.jpg"
+					alt="profile image"
+				/>
 				<h1 class="card__name">
 					Victor Crest <span class="card__age">26</span>
 				</h1>
