--- a/Newbie/ProfileCardComponent/index.html
+++ b/Newbie/ProfileCardComponent/index.html
@@ -36,7 +36,7 @@
 				<img
 					class="card__profile-image"
 					src="/images/image-victor.jpg"
-					alt="profile image"
+					alt="profile"
 				/>
 				<h1 class="card__name">
 					Victor Crest <span class="card__age">26</span>
