added mobile design social proof section

--- a/Newbie/SocialProofSection/index.html
+++ b/Newbie/SocialProofSection/index.html
@@ -71,7 +71,7 @@
 						received it in time. Excellent!"
 					</p>
 				</article>
-				<article>
+				<article class="review">
 					<header class="review__header">
 						<img
 							class="review__header__image"
@@ -89,7 +89,7 @@
 						speed of delivery."
 					</p>
 				</article>
-				<article>
+				<article class="review">
 					<header class="review__header">
 						<img
 							class="review__header__image"
