--- a/Newbie/SocialProofSection/index.html
+++ b/Newbie/SocialProofSection/index.html
@@ -28,30 +28,35 @@
 	</head>
 	<body>
 		<main>
-			<section class="banner">
-				<h1 class="banner__header">10,000+ of our users love our products.</h1>
-				<p class="banner__text">
-					We only provide great products combined with excellent customer
-					service. See what our satisfied customers are saying about our
-					services.
-				</p>
-			</section>
-			<section class="ratings">
-				<article class="rating">
-					<div class="rating__stars"></div>
-					<p class="rating__text">Rated 5 Stars in Reviews</p>
-				</article>
+			<section class="container">
+				<section class="banner">
+					<h1 class="banner__header">
+						10,000+ of our users love our products.
+					</h1>
+					<p class="banner__text">
+						We only provide great products combined with excellent customer
+						service. See what our satisfied customers are saying about our
+						services.
+					</p>
+				</section>
+				<section class="ratings">
+					<article class="rating">
+						<div class="rating__stars"></div>
+						<p class="rating__text">Rated 5 Stars in Reviews</p>
+					</article>
 
-				<article class="rating">
-					<div class="rating__stars"></div>
-					<p class="rating__text">Rated 5 Stars in Report Guru</p>
-				</article>
+					<article class="rating">
+						<div class="rating__stars"></div>
+						<p class="rating__text">Rated 5 Stars in Report Guru</p>
+					</article>
 
-				<article class="rating">
-					<div class="rating__stars"></div>
-					<p class="rating__text">Rated 5 Stars in Report BestTech</p>
-				</article>
+					<article class="rating">
+						<div class="rating__stars"></div>
+						<p class="rating__text">Rated 5 Stars in Report BestTech</p>
+					</article>
+				</section>
 			</section>
+
 			<section class="reviews">
 				<article class="review">
 					<header class="review__header">
@@ -114,7 +119,7 @@
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
+			>. Coded by <a href="https://github.com/yhertekin">yhertekin</a>.
 		</div>
 
 		<script>
