--- a/Junior/NewsletterSignUpWithSuccessMessage/index.html
+++ b/Junior/NewsletterSignUpWithSuccessMessage/index.html
@@ -31,7 +31,7 @@
 			<section class="container">
 				<section class="banner">
 					<img
-						class="banner__image"
+						class="banner__image banner__image--form"
 						src="/assets/images/illustration-sign-up-mobile.svg"
 						alt="sign-up illustration"
 					/>
