--- a/Junior/NewsletterSignUpWithSuccessMessage/index.html
+++ b/Junior/NewsletterSignUpWithSuccessMessage/index.html
@@ -85,7 +85,7 @@
 							inside to confirm your subscription.
 						</p>
 					</header>
-					<button class="content__success__button content__button">
+					<button class="content__button content__success__button">
 						Dismiss message
 					</button>
 				</section>
