--- a/Junior/AgeCalculatorApp/index.html
+++ b/Junior/AgeCalculatorApp/index.html
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/images/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Frontend Mentor | Age calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<style>
+			.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
+		</style>
+	</head>
+	<body>
+		<main>
+			<section class="form">
+				<div class="form-group">
+					<label for="day">day</label>
+					<input type="number" name="day" id="day" placeholder="DD" />
+				</div>
+				<div class="form-group">
+					<label for="month">month</label>
+					<input type="number" name="month" id="month" placeholder="MM" />
+				</div>
+				<div class="form-group">
+					<label for="year">year</label>
+					<input type="number" name="year" id="year" placeholder="YYYY" />
+				</div>
+			</section>
+			<div class="divider">
+				<button onclick="calculate()">
+					<img src="./assets/images/icon-arrow.svg" alt="" srcset="" />
+				</button>
+			</div>
+			<section>
+				<div class="result"><span>38</span> years</div>
+				<div class="result"><span>3</span> months</div>
+				<div class="result"><span>26</span> days</div>
+			</section>
+		</main>
 
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="https://github.com/yhertekin">yhertekin</a>.
+		</div>
+		<script>
+			function calculate() {
+				console.log("calculating...");
+			}
+		</script>
+	</body>
 </html>
