--- a/Junior/NewsHomepage/index.html
+++ b/Junior/NewsHomepage/index.html
@@ -41,7 +41,10 @@
         </header>
         <main class="main">
             <section class="main-news">
-                <img src="/assets/images/image-web-3-mobile.jpg" alt="web 3" />
+                <picture>
+                    <source srcset="/assets/images/image-web-3-desktop.jpg" media="(min-width: 35rem)" />
+                    <img src="/assets/images/image-web-3-mobile.jpg" alt="web 3" />
+                </picture>
                 <h1>The Bright Future of Web 3.0?</h1>
                 <div>
                     <p>
@@ -66,14 +69,38 @@
                     <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
                 </article>
             </section>
+            <section class="others">
+                <article>
+                    <img src="/assets/images/image-retro-pcs.jpg" alt="" />
+                    <div class="content">
+                        <div>01</div>
+                        <h4>Reviving Retro PCs</h4>
+                        <p>What happens when old PCs are given modern upgrades?</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="/assets/images/image-top-laptops.jpg" alt="" />
+                    <div class="content">
+                        <div>02</div>
+                        <h4>Top 10 Laptops of 2022</h4>
+                        <p>Our best picks for various needs and budgets.</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="/assets/images/image-gaming-growth.jpg" alt="" />
+                    <div class="content">
+                        <div>03</div>
+                        <h4>The Growth of Gaming</h4>
+                        <p>How the pandemic has sparked fresh opportunities.</p>
+                    </div>
+                </article>
+            </section>
         </main>
-        01 Reviving Retro PCs What happens when old PCs are given modern upgrades? 02 Top 10 Laptops of 2022 Our best
-        picks for various needs and budgets. 03 The Growth of Gaming How the pandemic has sparked fresh opportunities.
 
         <div class="attribution">
             Challenge by
             <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-            <a href="#">Your Name Here</a>.
+            <a href="https://github.com/yhertekin">yhertekin</a>.
         </div>
 
         <script>
