--- a/Junior/IntroSectionWithDropdownNavigation/index.html
+++ b/Junior/IntroSectionWithDropdownNavigation/index.html
@@ -8,8 +8,70 @@
 	</head>
 	<body>
 		<header>
-			<img src="/assets/logo.svg" alt="company logo" />
+			<img class="mt-[4px]" src="/assets/logo.svg" alt="company logo" />
 			<img class="toggle-menu" src="/assets/icon-menu.svg" alt="menu icon" />
+			<nav
+				class="hidden sm:flex items-center justify-between ml-[62px] -mt-[4px] text-[14px] w-full"
+			>
+				<ul class="flex">
+					<li class="">
+						<div class="flex items-center">
+							Features
+							<img
+								class="ml-[8px] features-icon"
+								src="/assets/icon-arrow-down.svg"
+								alt="arrow icon"
+							/>
+						</div>
+						<ul class="features-menu hidden">
+							<li class=""><img class="" src="/assets/icon-todo.svg" alt="todo" />Todo List</li>
+							<li class="">
+								<img
+									class="w-[20px] mr-[13px]"
+									src="/assets/icon-calendar.svg"
+									alt="calendar"
+								/>Calendar
+							</li>
+							<li class="">
+								<img
+									class="w-[17px] mr-[15px]"
+									src="/assets/icon-reminders.svg"
+									alt="reminders"
+								/>Reminders
+							</li>
+							<li class="">
+								<img
+									class="w-[20px] mr-[12px]"
+									src="/assets/icon-planning.svg"
+									alt="planning"
+								/>Planning
+							</li>
+						</ul>
+					</li>
+					<li class="ml-[39px]">
+						<div class="flex items-center company">
+							Company
+							<img class="ml-[8px] company-icon" src="/assets/icon-arrow-down.svg" alt="" />
+						</div>
+
+						<ul class="company-menu hidden">
+							<li class="">History</li>
+							<li class="">Our Team</li>
+							<li class="">Blog</li>
+						</ul>
+					</li>
+					<li class="ml-[39px]">Careers</li>
+					<li class="ml-[39px]">About</li>
+				</ul>
+				<div class="">
+					<button class="py-[8px] my-[2px] text-[14px] mr-[35px]">Login</button>
+					<button
+						class="py-[9px] px-[21px] my-[3px] text-[14px] ml-[3px] rounded-[12px] border border-almost-black"
+					>
+						Register
+					</button>
+				</div>
+			</nav>
 			<nav
 				class="menu-mobile translate-x-full transition-all fixed top-0 left-0 right-0 -bottom-1 bg-almost-black/[0.75]"
 			>
@@ -63,13 +125,13 @@
 							</div>
 
 							<ul class="py-[8px] pl-[24px] company-menu hidden">
-								<li class="flex items-center pt-[12px]">History</li>
-								<li class="flex items-center pt-[18px]">Our Team</li>
-								<li class="flex items-center pt-[18px]">Blog</li>
+								<li class="pt-[12px]">History</li>
+								<li class="pt-[18px]">Our Team</li>
+								<li class="pt-[18px]">Blog</li>
 							</ul>
 						</li>
-						<li class="py-[9px] flex items-center">Careers</li>
-						<li class="py-[9px] flex items-center">About</li>
+						<li class="py-[9px]">Careers</li>
+						<li class="py-[9px]">About</li>
 					</ul>
 					<div class="flex flex-col items-center mt-[13px]">
 						<button class="py-[8px] my-[2px] text-[14px]">Login</button>
