--- a/Junior/IntroSectionWithDropdownNavigation/index.html
+++ b/Junior/IntroSectionWithDropdownNavigation/index.html
@@ -14,8 +14,8 @@
 				class="hidden sm:flex items-center justify-between ml-[62px] -mt-[4px] text-[14px] w-full"
 			>
 				<ul class="flex">
-					<li class="">
-						<div class="flex items-center">
+					<li class="relative">
+						<div class="flex items-center features">
 							Features
 							<img
 								class="ml-[8px] features-icon"
@@ -23,23 +23,27 @@
 								alt="arrow icon"
 							/>
 						</div>
-						<ul class="features-menu hidden">
-							<li class=""><img class="" src="/assets/icon-todo.svg" alt="todo" />Todo List</li>
-							<li class="">
+						<ul
+							class="features-menu hidden absolute shadow py-[10px] pl-[21px] right-[1px] top-[39px] w-[153px] rounded-[10px]"
+						>
+							<li class="flex items-center pt-[11px] pl-[1px]">
+								<img class="w-[17px] mr-[16px]" src="/assets/icon-todo.svg" alt="todo" />Todo List
+							</li>
+							<li class="flex items-center pt-[11px]">
 								<img
 									class="w-[20px] mr-[13px]"
 									src="/assets/icon-calendar.svg"
 									alt="calendar"
 								/>Calendar
 							</li>
-							<li class="">
+							<li class="flex items-center pt-[11px] pl-[2px]">
 								<img
 									class="w-[17px] mr-[15px]"
 									src="/assets/icon-reminders.svg"
 									alt="reminders"
 								/>Reminders
 							</li>
-							<li class="">
+							<li class="flex items-center pt-[11px] pl-[1px]">
 								<img
 									class="w-[20px] mr-[12px]"
 									src="/assets/icon-planning.svg"
@@ -83,15 +87,15 @@
 					/>
 					<ul class="mt-6 ml-6">
 						<li class="py-[9px]">
-							<div class="flex items-center features">
+							<div class="flex items-center features-mobile">
 								Features
 								<img
-									class="ml-[15px] features-icon"
+									class="ml-[15px] features-icon-mobile"
 									src="/assets/icon-arrow-down.svg"
 									alt="arrow icon"
 								/>
 							</div>
-							<ul class="py-[8px] pl-[23px] features-menu hidden">
+							<ul class="py-[8px] pl-[23px] features-menu-mobile hidden">
 								<li class="flex items-center pt-[18px] pl-[1px]">
 									<img class="w-[17px] mr-[16px]" src="/assets/icon-todo.svg" alt="todo" />Todo List
 								</li>
@@ -119,12 +123,16 @@
 							</ul>
 						</li>
 						<li class="py-[9px]">
-							<div class="flex items-center company">
+							<div class="flex items-center company-mobile">
 								Company
-								<img class="ml-[15px] company-icon" src="/assets/icon-arrow-down.svg" alt="" />
+								<img
+									class="ml-[15px] company-icon-mobile"
+									src="/assets/icon-arrow-down.svg"
+									alt=""
+								/>
 							</div>
 
-							<ul class="py-[8px] pl-[24px] company-menu hidden">
+							<ul class="py-[8px] pl-[24px] company-menu-mobile hidden">
 								<li class="pt-[12px]">History</li>
 								<li class="pt-[18px]">Our Team</li>
 								<li class="pt-[18px]">Blog</li>
