--- a/Junior/IntroSectionWithDropdownNavigation/index.html
+++ b/Junior/IntroSectionWithDropdownNavigation/index.html
@@ -24,7 +24,7 @@
 							/>
 						</div>
 						<ul
-							class="features-menu hidden absolute shadow py-[10px] pl-[21px] right-[1px] top-[39px] w-[153px] rounded-[10px]"
+							class="features-menu hidden absolute shadow py-[10px] pl-[21px] right-[1px] top-[39px] w-[153px] rounded-[10px] bg-white"
 						>
 							<li class="flex items-center pt-[11px] pl-[1px]">
 								<img class="w-[17px] mr-[16px]" src="/assets/icon-todo.svg" alt="todo" />Todo List
@@ -52,25 +52,27 @@
 							</li>
 						</ul>
 					</li>
-					<li class="ml-[39px]">
+					<li class="ml-[39px] relative">
 						<div class="flex items-center company">
 							Company
 							<img class="ml-[8px] company-icon" src="/assets/icon-arrow-down.svg" alt="" />
 						</div>
 
-						<ul class="company-menu hidden">
-							<li class="">History</li>
-							<li class="">Our Team</li>
-							<li class="">Blog</li>
+						<ul
+							class="pt-[8px] pb-[21px] pl-[24px] company-menu hidden shadow absolute left-[1px] top-[39px] w-[115px] rounded-[10px] bg-white"
+						>
+							<li class="pt-[13px]">History</li>
+							<li class="pt-[11px]">Our Team</li>
+							<li class="pt-[11px]">Blog</li>
 						</ul>
 					</li>
 					<li class="ml-[39px]">Careers</li>
 					<li class="ml-[39px]">About</li>
 				</ul>
 				<div class="">
-					<button class="py-[8px] my-[2px] text-[14px] mr-[35px]">Login</button>
+					<button class="py-[8px] my-[2px] text-[14px] mr-[35px] login">Login</button>
 					<button
-						class="py-[9px] px-[21px] my-[3px] text-[14px] ml-[3px] rounded-[12px] border border-almost-black"
+						class="py-[9px] px-[21px] my-[3px] text-[14px] ml-[3px] rounded-[12px] border register"
 					>
 						Register
 					</button>
@@ -142,9 +144,9 @@
 						<li class="py-[9px]">About</li>
 					</ul>
 					<div class="flex flex-col items-center mt-[13px]">
-						<button class="py-[8px] my-[2px] text-[14px]">Login</button>
+						<button class="py-[8px] my-[2px] text-[14px] login">Login</button>
 						<button
-							class="py-[9px] px-[67px] my-[3px] text-[14px] ml-[3px] rounded-[12px] border border-almost-black"
+							class="py-[9px] px-[67px] my-[3px] text-[14px] ml-[3px] rounded-[12px] border border-almost-black register"
 						>
 							Register
 						</button>
